--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <header>
         <section>
             <h1>THE DESIGN SHOP</h1>
-            <nav>
+            <nav >
                 <ul>
-                    <li>Weekly Promotions</li>
+                    <li id="Weekly">Weekly Promotions</li>
                     <li>Contact</li>
                     <li>TDB</li>
                 </ul>
@@ -21,15 +21,15 @@
         </section>
     </header>
     <main>
-        <figure>
-            <img src="assets/img/1.png" alt="#">
-            <figcaption>
+        <figure id="Kanken">
+            <img  src="assets/img/1.png" alt="#">
+            <figcaption >
                 <p>Kanken Art Laptop 15" Special Edition Backpack</p>
                 <p>Fjallraven</p>
                 <p>$119.00</p>
             </figcaption>
         </figure>
-        <figure>
+        <figure id="Swing">
             <img src="assets/img/d2.png" alt="#">
             <figcaption>
                 <p>Swing Arm Wood Desk Lamp</p>
@@ -37,7 +37,7 @@
                 <p>$36.00</p>
             </figcaption>
         </figure>
-        <figure>
+        <figure id="Hajo">
             <img src="assets/img/u6.png" alt="#">
             <figcaption>
                 <p>Hajo Backpack</p>
@@ -45,7 +45,7 @@
                 <p>$89.00</p>
             </figcaption>
         </figure>
-        <figure>
+        <figure id="Electric">
             <img src="assets/img/u9.png" alt="#">
             <figcaption>
                 <p>Electric Pour-Over Kettle</p>
@@ -53,7 +53,7 @@
                 <p>$149.00</p>
             </figcaption>
         </figure>
-        <figure>
+        <figure id="Zed">
             <img src="assets/img/u10.png" alt="#">
             <figcaption>
                 <p>Zed Bamboo Longboard</p>
@@ -61,7 +61,7 @@
                 <p>$60.00</p>
             </figcaption>
         </figure>
-        <figure>
+        <figure id="Woodie">
             <img src="assets/img/h17.png" alt="#">
             <figcaption>
                 <p>Woodie Vintage Car</p>
@@ -69,7 +69,7 @@
                 <p>$35.00</p>
             </figcaption>
         </figure>
-        <figure>
+        <figure id="Logo">
             <img src="assets/img/c3.png" alt="#">
             <figcaption>
                 <p>Logo Modernism</p>
@@ -77,7 +77,7 @@
                 <p>$60.00</p>
             </figcaption>
         </figure>
-        <figure>
+        <figure id="Dieter">
             <img src="assets/img/d7.png" alt="#">
             <figcaption>
                 <p>Dieter Rams: As Little Design as Possible</p>
@@ -85,7 +85,7 @@
                 <p>$150.00</p>
             </figcaption>
         </figure>
-        <figure>
+        <figure id="Eye">
             <img src="assets/img/c6.png" alt="#">
             <figcaption>
                 <p>The Eye</p>
@@ -93,7 +93,7 @@
                 <p>$28.00</p>
             </figcaption>
         </figure>
-        <figure>
+        <figure id="Gather">
             <img src="assets/img/h13.png" alt="#">
             <figcaption>
                 <p>Gather Desk Organizer</p>
@@ -101,7 +101,7 @@
                 <p>$149.00</p>
             </figcaption>
         </figure>
-        <figure>
+        <figure id="Dipped">
             <img src="assets/img/h8.png" alt="#">
             <figcaption>
                 <p>Dipped Canteen</p>
@@ -109,7 +109,7 @@
                 <p>$28.00</p>
             </figcaption>
         </figure>
-        <figure>
+        <figure id="Sayl">
             <img src="assets/img/h2.png" alt="#">
             <figcaption>
                 <p>Sayl Office Chair White</p>
@@ -117,7 +117,7 @@
                 <p>$599.00</p>
             </figcaption>
         </figure>
-        <figure>
+        <figure id="Cherry">
             <img src="assets/img/d5.png" alt="#">
             <figcaption>
                 <p>Three Cherry Wood Notebook</p>
@@ -125,7 +125,7 @@
                 <p>$13.00</p>
             </figcaption>
         </figure>
-        <figure>
+        <figure id="Japan">
             <img src="assets/img/c5.png" alt="#">
             <figcaption>
                 <p>From Japan</p>
@@ -133,7 +133,7 @@
                 <p>$16.00</p>
             </figcaption>
         </figure>
-        <figure>
+        <figure id="Arigato">
             <img src="assets/img/h6.png" alt="#">
             <figcaption>
                 <p>Arigato Desk Lamp</p>
@@ -141,7 +141,7 @@
                 <p>$380.00</p>
             </figcaption>
         </figure>
-        <figure>
+        <figure id="Winston">
             <img src="assets/img/u7.png" alt="#">
             <figcaption>
                 <p>Winston Regal Watch</p>
@@ -149,7 +149,7 @@
                 <p>$58.00</p>
             </figcaption>
         </figure>
-        <figure>
+        <figure id="Letter">
             <img src="assets/img/d4.png" alt="#">
             <figcaption>
                 <p>Letter H Poster</p>
@@ -157,7 +157,7 @@
                 <p>$45.00</p>
             </figcaption>
         </figure>
-        <figure>
+        <figure id="Coffee">
             <img src="assets/img/u11.png" alt="#">
             <figcaption>
                 <p>Coffee Can</p>
@@ -165,7 +165,7 @@
                 <p>$11.00</p>
             </figcaption>
         </figure>
-        <figure>
+        <figure id="Beoplay">
             <img src="assets/img/h9.png" alt="#">
             <figcaption>
                 <p>Beoplay H4</p>
@@ -173,7 +173,7 @@
                 <p>$160.00</p>
             </figcaption>
         </figure>
-        <figure>
+        <figure id="Burrill">
             <img src="assets/img/p2.png" alt="#">
             <figcaption>
                 <p>Make It Now</p>
@@ -181,7 +181,7 @@
                 <p>$22.00</p>
             </figcaption>
         </figure>
-        <figure>
+        <figure id="Chair">
             <img src="assets/img/h4.png" alt="#">
             <figcaption>
                 <p>Black Side Chair</p>
@@ -189,7 +189,7 @@
                 <p>$54.00</p>
             </figcaption>
         </figure>
-        <figure>
+        <figure id="Simplicity">
             <img src="assets/img/c22.png" alt="#">
             <figcaption>
                 <p>Min: The New Simplicity in Graphic Design</p>
@@ -197,7 +197,7 @@
                 <p>$28.00</p>
             </figcaption>
         </figure>
-        <figure>
+        <figure id="Grid">
             <img src="assets/img/c1.png" alt="#">
             <figcaption>
                 <p>Grid systems in graphic design</p>
@@ -205,7 +205,7 @@
                 <p>$42.00</p>
             </figcaption>
         </figure>
-        <figure>
+        <figure id="Card">
             <img src="assets/img/u12.png" alt="#">
             <figcaption>
                 <p>Card Wallet</p>
@@ -213,7 +213,7 @@
                 <p>$15.00</p>
             </figcaption>
         </figure>
-        <figure>
+        <figure id="Classic">
             <img src="assets/img/p3.png" alt="#">
             <figcaption>
                 <p>Classic Advice Print Black</p>
@@ -221,7 +221,7 @@
                 <p>$30.00</p>
             </figcaption>
         </figure>
-        <figure>
+        <figure id="Magic">
             <img src="assets/img/life-15.png" alt="#">
             <figcaption>
                 <p>Magic Mouse 2</p>
@@ -229,7 +229,7 @@
                 <p>$92.00</p>
             </figcaption>
         </figure>
-        <figure>
+        <figure id="Travel">
             <img src="assets/img/life-17.png" alt="#">
             <figcaption>
                 <p>Travel Tumbler</p>
@@ -237,7 +237,7 @@
                 <p>$34.00</p>
             </figcaption>
         </figure>
-        <figure>
+        <figure id="Keyboard">
             <img src="assets/img/life-16.png" alt="#">
             <figcaption>
                 <p>Magic Keyboard</p>
@@ -245,7 +245,7 @@
                 <p>$139.00</p>
             </figcaption>
         </figure>
-        <figure>
+        <figure id="Bottle">
             <img src="assets/img/u8.png" alt="#">
             <figcaption>
                 <p>Bottle Grinder</p>
@@ -253,7 +253,7 @@
                 <p>$75.00</p>
             </figcaption>
         </figure>
-        <figure>
+        <figure id="Geo">
             <img src="assets/img/home-8.png" alt="#">
             <figcaption>
                 <p>Geo Thermos</p>
@@ -261,7 +261,7 @@
                 <p>$62.00</p>
             </figcaption>
         </figure>
-        <figure>
+        <figure id="Womb">
             <img src="assets/img/home-10.png" alt="#">
             <figcaption>
                 <p>Womb Chair & Ottoman</p>
@@ -269,7 +269,7 @@
                 <p>$799.00</p>
             </figcaption>
         </figure>
-        <figure>
+        <figure id="Water">
             <img src="assets/img/home-9.png" alt="#">
             <figcaption>
                 <p>Water Filter Glass Carafe</p>
