--- a/index.html
+++ b/index.html
@@ -10,271 +10,459 @@
 <body>
     <header>
         <section>
-            <h1>THE DESIGN SHOP</h1>
-            <nav >
-                <ul>
-                    <li id="Weekly">Weekly Promotions</li>
-                    <li>Contact</li>
-                    <li>TDB</li>
-                </ul>
-            </nav>
+            <h1>
+                THE DESIGN SHOP
+            </h1>
+
         </section>
     </header>
     <main>
         <figure id="Kanken">
             <img  src="assets/img/1.png" alt="#">
             <figcaption >
-                <p>Kanken Art Laptop 15" Special Edition Backpack</p>
-                <p>Fjallraven</p>
-                <p>$119.00</p>
+                <p>
+                    Kanken Art Laptop 15" Special Edition Backpack
+                </p>
+                <p>
+                    Fjallraven
+                </p>
+                <p>
+                    $119.00
+                </p>
             </figcaption>
         </figure>
         <figure id="Swing">
             <img src="assets/img/d2.png" alt="#">
             <figcaption>
-                <p>Swing Arm Wood Desk Lamp</p>
-                <p>Tomons</p>
-                <p>$36.00</p>
+                <p>
+                    Swing Arm Wood Desk Lamp
+                </p>
+                <p>
+                    Tomons
+                </p>
+                <p>
+                    $36.00
+                </p>
             </figcaption>
         </figure>
         <figure id="Hajo">
             <img src="assets/img/u6.png" alt="#">
             <figcaption>
-                <p>Hajo Backpack</p>
-                <p>Ucon Acrobatics</p>
-                <p>$89.00</p>
+                <p>
+                    Hajo Backpack
+                </p>
+                <p>
+                    Ucon Acrobatics
+                </p>
+                <p>
+                    $89.00
+                </p>
             </figcaption>
         </figure>
         <figure id="Electric">
             <img src="assets/img/u9.png" alt="#">
             <figcaption>
-                <p>Electric Pour-Over Kettle</p>
-                <p>Fellow</p>
-                <p>$149.00</p>
+                <p>
+                    Electric Pour-Over Kettle
+                </p>
+                <p>
+                    Fellow
+                </p>
+                <p>
+                    $149.00
+                </p>
             </figcaption>
         </figure>
         <figure id="Zed">
             <img src="assets/img/u10.png" alt="#">
             <figcaption>
-                <p>Zed Bamboo Longboard</p>
-                <p>Retrospec</p>
-                <p>$60.00</p>
+                <p>
+                    Zed Bamboo Longboard
+                </p>
+                <p>
+                    Retrospec
+                </p>
+                <p>
+                    $60.00
+                </p>
             </figcaption>
         </figure>
         <figure id="Woodie">
             <img src="assets/img/h17.png" alt="#">
             <figcaption>
-                <p>Woodie Vintage Car</p>
-                <p>Candylab Toys</p>
-                <p>$35.00</p>
+                <p>
+                    Woodie Vintage Car
+                </p>
+                <p>
+                    Candylab Toys
+                </p>
+                <p>
+                    $35.00
+                </p>
             </figcaption>
         </figure>
         <figure id="Logo">
             <img src="assets/img/c3.png" alt="#">
             <figcaption>
-                <p>Logo Modernism</p>
-                <p>Taschen</p>
-                <p>$60.00</p>
+                <p>
+                    Logo Modernism
+                </p>
+                <p>
+                    Taschen
+                </p>
+                <p>
+                    $60.00
+                </p>
             </figcaption>
         </figure>
         <figure id="Dieter">
             <img src="assets/img/d7.png" alt="#">
             <figcaption>
-                <p>Dieter Rams: As Little Design as Possible</p>
-                <p>Sophie Lovell</p>
-                <p>$150.00</p>
+                <p>
+                    Dieter Rams: As Little Design as Possible
+                </p>
+                <p>
+                    Sophie Lovel
+                </p>
+                <p>
+                    $150.00
+                </p>
             </figcaption>
         </figure>
         <figure id="Eye">
             <img src="assets/img/c6.png" alt="#">
             <figcaption>
-                <p>The Eye</p>
-                <p>Nathan Williams</p>
-                <p>$28.00</p>
+                <p>
+                    The Eye
+                </p>
+                <p>
+                    Nathan Williams
+                </p>
+                <p>
+                    $28.00
+                </p>
             </figcaption>
         </figure>
         <figure id="Gather">
             <img src="assets/img/h13.png" alt="#">
             <figcaption>
-                <p>Gather Desk Organizer</p>
-                <p>Ugmonk</p>
-                <p>$149.00</p>
+                <p>
+                    Gather Desk Organizer
+                </p>
+                <p>
+                    Ugmonk
+                </p>
+                <p>
+                    $149.00
+                </p>
             </figcaption>
         </figure>
         <figure id="Dipped">
             <img src="assets/img/h8.png" alt="#">
             <figcaption>
-                <p>Dipped Canteen</p>
-                <p>Corkcicle.</p>
-                <p>$28.00</p>
+                <p>
+                    Dipped Canteen
+                </p>
+                <p>
+                    Corkcicle.
+                </p>
+                <p>
+                    $28.00
+                </p>
             </figcaption>
         </figure>
         <figure id="Sayl">
             <img src="assets/img/h2.png" alt="#">
             <figcaption>
-                <p>Sayl Office Chair White</p>
-                <p>Herman Miller</p>
-                <p>$599.00</p>
+                <p>
+                    Sayl Office Chair White
+                </p>
+                <p>
+                    Herman Miller
+                </p>
+                <p>
+                    $599.00
+                </p>
             </figcaption>
         </figure>
         <figure id="Cherry">
             <img src="assets/img/d5.png" alt="#">
             <figcaption>
-                <p>Three Cherry Wood Notebook</p>
-                <p>Field Notes</p>
-                <p>$13.00</p>
+                <p>
+                    Three Cherry Wood Notebook
+                </p>
+                <p>
+                    Field Notes
+                </p>
+                <p>
+                    $13.00
+                </p>
             </figcaption>
         </figure>
         <figure id="Japan">
             <img src="assets/img/c5.png" alt="#">
             <figcaption>
-                <p>From Japan</p>
-                <p>Counter Print</p>
-                <p>$16.00</p>
+                <p>
+                    From Japan
+                </p>
+                <p>
+                    Counter Print
+                </p>
+                <p>
+                    $16.00
+                </p>
             </figcaption>
         </figure>
         <figure id="Arigato">
-            <img src="assets/img/h6.png" alt="#">
+            <img src="assets/img/h6.png" alt="#" >
             <figcaption>
-                <p>Arigato Desk Lamp</p>
-                <p>Grupa</p>
-                <p>$380.00</p>
+                <p>
+                    Arigato Desk Lamp
+                </p>
+                <p>
+                    Grupa
+                </p>
+                <p>
+                    $380.00
+                </p>
             </figcaption>
         </figure>
         <figure id="Winston">
             <img src="assets/img/u7.png" alt="#">
             <figcaption>
-                <p>Winston Regal Watch</p>
-                <p>Komono</p>
-                <p>$58.00</p>
+                <p>
+                    Winston Regal Watch
+                </p>
+                <p>
+                    Komono
+                </p>
+                <p>
+                    $58.00
+                </p>
             </figcaption>
         </figure>
         <figure id="Letter">
             <img src="assets/img/d4.png" alt="#">
             <figcaption>
-                <p>Letter H Poster</p>
-                <p>Hey Studio</p>
-                <p>$45.00</p>
+                <p>
+                    Letter H Poster
+                </p>
+                <p>
+                    Hey Studio
+                </p>
+                <p>
+                    $45.00
+                </p>
             </figcaption>
         </figure>
         <figure id="Coffee">
             <img src="assets/img/u11.png" alt="#">
             <figcaption>
-                <p>Coffee Can</p>
-                <p>Blue Bottle Company</p>
-                <p>$11.00</p>
+                <p>
+                    Coffee Can
+                </p>
+                <p>
+                    Blue Bottle Company
+                </p>
+                <p>
+                    $11.00
+                </p>
             </figcaption>
         </figure>
         <figure id="Beoplay">
             <img src="assets/img/h9.png" alt="#">
             <figcaption>
-                <p>Beoplay H4</p>
-                <p>Bang & Olufsen</p>
-                <p>$160.00</p>
+                <p>
+                    Beoplay H4
+                </p>
+                <p>
+                    Bang & Olufsen
+                </p>
+                <p>
+                    $160.00
+                </p>
             </figcaption>
         </figure>
         <figure id="Burrill">
             <img src="assets/img/p2.png" alt="#">
             <figcaption>
-                <p>Make It Now</p>
-                <p>Anthony Burrill</p>
-                <p>$22.00</p>
+                <p>
+                    Make It Now
+                </p>
+                <p>
+                    Anthony Burrill
+                </p>
+                <p>
+                    $22.00
+                </p>
             </figcaption>
         </figure>
         <figure id="Chair">
             <img src="assets/img/h4.png" alt="#">
             <figcaption>
-                <p>Black Side Chair</p>
-                <p>Eames Style</p>
-                <p>$54.00</p>
+                <p>
+                    Black Side Chair
+                </p>
+                <p>
+                    Eames Style
+                </p>
+                <p>
+                    $54.00
+                </p>
             </figcaption>
         </figure>
         <figure id="Simplicity">
             <img src="assets/img/c22.png" alt="#">
             <figcaption>
-                <p>Min: The New Simplicity in Graphic Design</p>
-                <p>Thames & Hudson</p>
-                <p>$28.00</p>
+                <p>
+                    Min: The New Simplicity in Graphic Design
+                </p>
+                <p>
+                    Thames & Hudson
+                </p>
+                <p>
+                    $28.00
+                </p>
             </figcaption>
         </figure>
         <figure id="Grid">
             <img src="assets/img/c1.png" alt="#">
             <figcaption>
-                <p>Grid systems in graphic design</p>
-                <p>Josef Müller-Brockmann</p>
-                <p>$42.00</p>
+                <p>
+                    Grid systems in graphic design
+                </p>
+                <p>
+                    Josef Müller-Brockmann
+                </p>
+                <p>
+                    $42.00
+                </p>
             </figcaption>
         </figure>
         <figure id="Card">
             <img src="assets/img/u12.png" alt="#">
             <figcaption>
-                <p>Card Wallet</p>
-                <p>Herschel</p>
-                <p>$15.00</p>
+                <p>
+                    Card Wallet
+                </p>
+                <p>
+                    Herschel
+                </p>
+                <p>
+                    $15.00
+                </p>
             </figcaption>
         </figure>
         <figure id="Classic">
             <img src="assets/img/p3.png" alt="#">
             <figcaption>
-                <p>Classic Advice Print Black</p>
-                <p>Good Fucking Design Advice</p>
-                <p>$30.00</p>
+                <p>
+                    Classic Advice Print Black
+                </p>
+                <p>
+                    Good Fucking Design Advice
+                </p>
+                <p>
+                    $30.00
+                </p>
             </figcaption>
         </figure>
         <figure id="Magic">
             <img src="assets/img/life-15.png" alt="#">
             <figcaption>
-                <p>Magic Mouse 2</p>
-                <p>Apple</p>
-                <p>$92.00</p>
+                <p>
+                    Magic Mouse 2
+                </p>
+                <p>
+                    Apple
+                </p>
+                <p>
+                    $92.00
+                </p>
             </figcaption>
         </figure>
         <figure id="Travel">
             <img src="assets/img/life-17.png" alt="#">
             <figcaption>
-                <p>Travel Tumbler</p>
-                <p>Kinto</p>
-                <p>$34.00</p>
+                <p>
+                    Travel Tumbler
+                </p>
+                <p>
+                    Kinto
+                </p>
+                <p>
+                    $34.00
+                </p>
             </figcaption>
         </figure>
         <figure id="Keyboard">
             <img src="assets/img/life-16.png" alt="#">
             <figcaption>
-                <p>Magic Keyboard</p>
-                <p>Apple</p>
-                <p>$139.00</p>
+                <p>
+                    Magic Keyboard
+                </p>
+                <p>
+                    Apple
+                </p>
+                <p>
+                    $139.00
+                </p>
             </figcaption>
         </figure>
         <figure id="Bottle">
             <img src="assets/img/u8.png" alt="#">
             <figcaption>
-                <p>Bottle Grinder</p>
-                <p>Menu</p>
-                <p>$75.00</p>
+                <p>
+                    Bottle Grinder
+                </p>
+                <p>
+                    Menu
+                </p>
+                <p>
+                    $75.00
+                </p>
             </figcaption>
         </figure>
         <figure id="Geo">
             <img src="assets/img/home-8.png" alt="#">
             <figcaption>
-                <p>Geo Thermos</p>
-                <p>Normann Copenhagen</p>
-                <p>$62.00</p>
+                <p>
+                    Geo Thermos
+                </p>
+                <p>
+                    Normann Copenhagen
+                </p>
+                <p>
+                    $62.00</p>
             </figcaption>
         </figure>
         <figure id="Womb">
             <img src="assets/img/home-10.png" alt="#">
             <figcaption>
-                <p>Womb Chair & Ottoman</p>
-                <p>Kardiel</p>
-                <p>$799.00</p>
+                <p>
+                    Womb Chair & Ottoman
+                </p>
+                <p>
+                    Kardiel
+                </p>
+                <p>
+                    $799.00
+                </p>
             </figcaption>
         </figure>
         <figure id="Water">
             <img src="assets/img/home-9.png" alt="#">
             <figcaption>
-                <p>Water Filter Glass Carafe</p>
-                <p>Soma</p>
-                <p>$30.00</p>
+                <p>
+                    Water Filter Glass Carafe
+                    
+                </p>
+                <p>
+                    Soma
+                </p>
+                <p>
+                    $30.00
+                </p>
             </figcaption>
         </figure>
     </main>
